// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/PageDialog page create 1`] = `
<div
  style="height: 100%;"
>
  <form>
    <div
      class="p-dialog-mask p-component-overlay "
      style="z-index: 1027;"
    >
      <div
        aria-labelledby="pv_id_30_header"
        aria-modal="true"
        class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
        role="dialog"
        style="z-index: 1028;"
      >
        <div
          class="p-dialog-header"
        >
          <span
            class="p-dialog-title"
            id="pv_id_30_header"
          >
            Create a new page
          </span>
           
          <div
            class="p-dialog-header-icons"
          >
            <!---->
             
            <button
              aria-label="close"
              class="p-dialog-header-icon p-dialog-header-close p-link"
              tabindex="-1"
              type="button"
            >
              <span
                class="p-dialog-header-close-icon pi pi-times"
              />
              <span
                class="p-ink"
              />
            </button>
          </div>
        </div>
         
        <div
          class="p-dialog-content"
          style="max-height: 70vh;"
        >
          <div
            class="p-field"
          >
            <label
              for="pageTextField"
            >
              Page Name
            </label>
             
            <input
              autofocus="autofocus"
              class="p-inputtext p-component"
              id="pageTextField"
              required="required"
            />
          </div>
           
          <div
            class="p-field"
          >
            <label
              for="PageHiddenField"
            >
              Hide the page
            </label>
             
            <div
              class="p-inputswitch p-component"
              id="PageHiddenField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  role="switch"
                  type="checkbox"
                />
              </div>
               
              <span
                class="p-inputswitch-slider"
              />
            </div>
          </div>
        </div>
         
        <div
          class="p-dialog-footer"
        >
          <button
            class="p-button-text p-button-secondary p-button p-component"
            type="button"
          >
            <span
              class="pi pi-times p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              Cancel
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <button
            class="p-button-primary p-button p-component"
            type="submit"
          >
            <span
              class="pi pi-check p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              Submit
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`storyshots components/visualize/PageDialog page edit 1`] = `
<div
  style="height: 100%;"
>
  <form>
    <div
      class="p-dialog-mask p-component-overlay "
      style="z-index: 1028;"
    >
      <div
        aria-labelledby="pv_id_31_header"
        aria-modal="true"
        class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
        role="dialog"
        style="z-index: 1029;"
      >
        <div
          class="p-dialog-header"
        >
          <span
            class="p-dialog-title"
            id="pv_id_31_header"
          >
            Edit a page
          </span>
           
          <div
            class="p-dialog-header-icons"
          >
            <!---->
             
            <button
              aria-label="close"
              class="p-dialog-header-icon p-dialog-header-close p-link"
              tabindex="-1"
              type="button"
            >
              <span
                class="p-dialog-header-close-icon pi pi-times"
              />
              <span
                class="p-ink"
              />
            </button>
          </div>
        </div>
         
        <div
          class="p-dialog-content"
          style="max-height: 70vh;"
        >
          <div
            class="p-field"
          >
            <label
              for="pageTextField"
            >
              Page Name
            </label>
             
            <input
              autofocus="autofocus"
              class="p-inputtext p-component p-filled"
              id="pageTextField"
              required="required"
            />
          </div>
           
          <div
            class="p-field"
          >
            <label
              for="PageHiddenField"
            >
              Hide the page
            </label>
             
            <div
              class="p-inputswitch p-component p-inputswitch-checked"
              id="PageHiddenField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  aria-checked="true"
                  role="switch"
                  type="checkbox"
                />
              </div>
               
              <span
                class="p-inputswitch-slider"
              />
            </div>
          </div>
        </div>
         
        <div
          class="p-dialog-footer"
        >
          <button
            class="p-button-text p-button-secondary p-button p-component"
            type="button"
          >
            <span
              class="pi pi-times p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              Cancel
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <button
            class="p-button-primary p-button p-component"
            type="submit"
          >
            <span
              class="pi pi-check p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              Submit
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
